# tools/codegen/openapi.json
@@ -491,7 +491,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Schema"
+                    "$ref": "#/components/schemas/CallSchema"
                   }
                 }
               }
@@ -871,7 +871,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Schema"
+                    "$ref": "#/components/schemas/CallSchema"
                   }
                 }
               }
